fixed color options layout on tablet, fixed margin

--- a/sass/components/form/_options.scss
+++ b/sass/components/form/_options.scss
@@ -32,9 +32,6 @@
         box-sizing: border-box;
         overflow: hidden;
 
-        @include lg {
-            margin-bottom: 0 !important;
-        }
     
         .fc-col-3{
             width: 31.3%;
